<resources>
    <string name="app_name">intent</string>
    <string name="pick_water">Pick body of water</string>
    <string-array name="bodies_of_water">
        <item>Pacific Ocean</item>
        <item>Atlantic Ocean</item>
        <item>Indian Ocean</item>
        <item>Southern Ocean</item>
        <item>Arctic Ocean</item>
        <item>Mediterranean Sea</item>
        <item>Caribbean Sea</item>
        <item>South China Sea</item>
        <item>Bering Sea</item>
        <item>Gulf of Mexico</item>
        <item>Okhotsk Sea</item>
        <item>East China Sea</item>
        <item>Hudson Bay</item>
        <item>Japan Sea</item>
        <item>Andaman Sea</item>
        <item>North Sea</item>
        <item>Red Sea</item>
        <item>Baltic Sea</item>
    </string-array>
</resources>
