<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.intent.MainActivity">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="alarmmannager"
        android:id="@+id/button"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="24dp"
        android:onClick="alarm"/>

    <AutoCompleteTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="New AutoCompleteTextView"
        android:id="@+id/autoCompleteTextView"
        android:layout_below="@+id/button"
        android:layout_alignStart="@+id/button"
        android:layout_marginTop="66dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="battery"
        android:id="@+id/button2"
        android:layout_below="@+id/button"
        android:layout_centerHorizontal="true"
        android:onClick="startBattery"/>
</RelativeLayout>
